--- a/src/Syncfusion_16.1.0.37/Views/DatePicker/DatePickerFeatures.cshtml
+++ b/src/Syncfusion_16.1.0.37/Views/DatePicker/DatePickerFeatures.cshtml
@@ -8,7 +8,7 @@
     
     <ej-date-picker id="DatePick" value="DateTime.Today"
                     show-other-months="true"
-                    date-format="MM/dd/yyyy"></ej-date-picker>
+                    date-format="dd/MM/yyyy"></ej-date-picker>
     <ej-time-picker id="Timepick" value="DateTime.Today"
                     show-other-months="true"
                     date-format="MM/dd/yyyy"></ej-time-picker>
