--- a/src/Syncfusion_16.1.0.37/Views/Shared/_Layout.cshtml
+++ b/src/Syncfusion_16.1.0.37/Views/Shared/_Layout.cshtml
@@ -9,23 +9,24 @@
     <environment names="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="~/css/site.css" />
-        
-<link href="@Url.Content("~/lib/syncfusion-javascript/Content/ej/web/Material/ej.web.all.min.css")" rel="stylesheet" />
-		
-<script src="@Url.Content("~/lib/jquery/dist/jquery.js")"></script>
+        <link href="@Url.Content("~/lib/syncfusion-javascript/Content/ej/web/Material/ej.web.all.min.css")" rel="stylesheet" />
+        <script src="@Url.Content("~/lib/jquery/dist/jquery.js")"></script>
     </environment>
+
     <environment names="Staging,Production">
         <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
               asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
-        
-<link href="@Url.Content("~/lib/syncfusion-javascript/Content/ej/web/Material/ej.web.all.min.css")" rel="stylesheet" />
-		
-<script src="@Url.Content("~/lib/jquery/dist/jquery.js")"></script>
+
+        <link href="@Url.Content("~/lib/syncfusion-javascript/Content/ej/web/Material/ej.web.all.min.css")" rel="stylesheet" />
+
+        <script src="@Url.Content("~/lib/jquery/dist/jquery.js")"></script>
     </environment>
+
     @Html.Raw(JavaScriptSnippet.FullScript)
 </head>
+
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
@@ -38,37 +39,45 @@
                 </button>
                 <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">DotnetFiddle</a>
             </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                </ul>
-            </div>
         </div>
     </nav>
     <div class="container body-content">
         @RenderBody()
+        <div class="cols-source sourcecodeTab">
+            Insert code content here
+            @*<ej-tab id="defaultTabs">
+                <e-tab-items>
+                    <e-tab-item id="Controller" text="Controller">
+                        @(new HtmlString(Html.RenderSourceCodeTab("CodeViewTab")))
+                    </e-tab-item>
+                    <e-tab-item id="View" text="View">
+                    </e-tab-item>
+                    <e-tab-item id="Model" text="Model">
+                    </e-tab-item>
+                </e-tab-items>
+            </ej-tab>*@
+
+        </div>
         <hr />
         <footer>
             <p>&copy; 2017 - DotnetFiddle</p>
         </footer>
     </div>
 
-    <environment names="Development">        
+    <environment names="Development">
         <!-- <script src="~/lib/jquery/dist/jquery.js"></script> -->
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
-        
-<script src="@Url.Content("~/lib/jsrender/jsrender.min.js")"></script>
-<script src="@Url.Content("~/lib/syncfusion-javascript/Scripts/ej/web/ej.web.all.min.js")"></script>
+        <script src="@Url.Content("~/lib/jsrender/jsrender.min.js")"></script>
+        <script src="@Url.Content("~/lib/syncfusion-javascript/Scripts/ej/web/ej.web.all.min.js")"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
-    <environment names="Staging,Production">        
+
+    <environment names="Staging,Production">
         <!-- <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js" -->
-                <!-- asp-fallback-src="~/lib/jquery/dist/jquery.min.js" -->
-                <!-- asp-fallback-test="window.jQuery" -->
-                <!-- crossorigin="anonymous" -->
-                <!-- integrity="sha384-K+ctZQ+LL8q6tP7I94W+qzQsfRV2a+AfHIi9k8z8l9ggpc8X+Ytst4yBo/hH+8Fk"> -->
+        <!-- asp-fallback-src="~/lib/jquery/dist/jquery.min.js" -->
+        <!-- asp-fallback-test="window.jQuery" -->
+        <!-- crossorigin="anonymous" -->
+        <!-- integrity="sha384-K+ctZQ+LL8q6tP7I94W+qzQsfRV2a+AfHIi9k8z8l9ggpc8X+Ytst4yBo/hH+8Fk"> -->
         <!-- </script> -->
         <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/bootstrap.min.js"
                 asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
@@ -76,13 +85,19 @@
                 crossorigin="anonymous"
                 integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
         </script>
-        
-<script src="@Url.Content("~/lib/jsrender/jsrender.min.js")"></script>
-<script src="@Url.Content("~/lib/syncfusion-javascript/Scripts/ej/web/ej.web.all.min.js")"></script>
+
+        <script src="@Url.Content("~/lib/jsrender/jsrender.min.js")"></script>
+        <script src="@Url.Content("~/lib/syncfusion-javascript/Scripts/ej/web/ej.web.all.min.js")"></script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
     </environment>
-    <ej-script-manager></ej-script-manager>
 
+    <ej-script-manager></ej-script-manager>
+    <script>
+        $(function () {
+            //alert("hi");
+
+        })
+    </script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
