--- a/MVCHome/sample/sample/Views/Shared/_Layout.cshtml
+++ b/MVCHome/sample/sample/Views/Shared/_Layout.cshtml
@@ -4,8 +4,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - Syncfusion - .NET core application</title>
     <link href="~/Content/material.css" rel="stylesheet" />
+    <link rel="shortcut icon" href="@Url.Content("~/Content/favicon.ico")">
     <!-- Syncfusion Essential JS 2 Scripts -->
     <script src="~/Scripts/ej2.min.js"></script>
     @Styles.Render("~/Content/css")
