--- a/MVCHome/sample/sample/Views/Default/Index.cshtml
+++ b/MVCHome/sample/sample/Views/Default/Index.cshtml
@@ -27,17 +27,25 @@
     </section>
     <section class="sub_heading" id="upload_section">
         <h4 class="heading">Upload files</h4>
+		<h4 class="upload_file_heading">controller</h4>
         @Html.EJS().Uploader("controller_file").AutoUpload(false).AsyncSettings(new Syncfusion.EJ2.Inputs.UploaderAsyncSettings { SaveUrl = @Url.Content("/Default/Save") }).Uploading("beforeUpload").Render()
-        <div class="e-float-input sync_text">
+        <h4 class="upload_file_heading">View</h4>
+		<div class="e-float-input sync_text">
             <input id="view_file_mapping" name="view" required="" type="text" autocomplete="off">
             <span class="e-float-line"></span>
-            <label class="e-float-text">Controller</label>
+            <label class="e-float-text">Target controller for uploading view file</label>
         </div>
         @Html.EJS().Uploader("view_file").AutoUpload(false).AsyncSettings(new Syncfusion.EJ2.Inputs.UploaderAsyncSettings { SaveUrl = @Url.Content("/Default/Save") }).Uploading("beforeUpload_view").Render()
     </section>
     <section id="Target" class="sub_heading" style="display: none"></section>
 </section>
-
+<div class="sb-body-overlay e-view sb-hide">
+                <div class="sb-loading">
+                    <svg class="circular" height="40" width="40">
+                        <circle class="path" cx="25" cy="25" r="20" fill="none" stroke-width="6" stroke-miterlimit="10"></circle>
+                    </svg>
+                </div>
+            </div>
 <script>
     $(function () {
         $("#submit").attr("type", "submit");
@@ -46,31 +54,7 @@
     displayTarget = function () {
         $("#Target").show();
         }
-    //$("#submit").click(function (e) {
-    //    e.preventDefault();
-    //    debugger
-
-    //    var data = {
-    //        net_ver: $("#net_ver").val(), sync_ver: $("#sync_ver").val(), controller: $("#controller").val(), view: $("#view").val()
-    //    }
-    //    $.ajax({
-    //        type: "post", 
-    //        url: "Index",
-    //        data: data,
-    //        success: function (response) {
-    //            debugger
-    //            $("#url").html(response);
-    //        },
-    //        error: function (response) {
-    //            $("#url").html(response);
-    //        }
-    //    })
-    //})
-    //updateUrl = function (data) {
-    //    debugger
-    //    alert("success");
-    //}
-
+   
     beforeUpload = function (args) {
         args.customFormData = [{ 'sync_ver': $("#sync_ver").val()  }];
     }
@@ -84,7 +68,45 @@
 
 
 <style>
+	.sb-body-overlay {
+	display: none;
+    z-index: 10000023;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255,255,255,1);
+    overflow: hidden;
+    pointer-events: none;
+}
 
+.sb-loading {
+    width: 56px;
+    height: 56px;
+    position: absolute;
+    top: calc(50% - 28px);
+    left: calc(50% - 28px);
+    z-index: 10000;
+    border-radius: 50%;
+    padding: 3px;
+    box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+    overflow: hidden;
+    display: inline-block;
+    background: #fff;
+}
+svg:not(:root) {
+    overflow: hidden;
+}
+.circular {
+    animation: rotate 2s linear infinite;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+}
+	.upload_file_heading{
+		display: inline-block;
+    color: #3F51B5;
+    font-family: sans-serif;
+	}
     #upload_section .e-upload.e-control {
         height: fit-content;
     }
@@ -152,6 +174,15 @@
     #user_input form > .sync_btn {
         margin-left: 40%;
         margin-bottom: 26px;
+		    background-color: transparent;
+    border: 2px solid #3F51B5;
+    color: #3F51B5;
+    }
+	
+	#user_input form > .sync_btn:hover {
+       
+		    background-color: #3F51B5;
+   
     }
 
     #user_input form > * {
