--- a/MVCHome/sample/sample/Views/Default/Index.cshtml
+++ b/MVCHome/sample/sample/Views/Default/Index.cshtml
@@ -6,7 +6,7 @@
     <section class="sub_heading">
         <div id="user_input">
             <h4 class="heading">Configuration and Samples to run</h4>
-            @using (Ajax.BeginForm("Index", "Default", new AjaxOptions { HttpMethod = "Post", UpdateTargetId = "Target" , OnSuccess="displayTarget"}))
+            @using (Html.BeginForm())
             {
                 @Html.EJS().DropDownList("net_ver").Index(0).Fields(e => e.Text("Text").Value("Value")).DataSource((List<DropdownModel>)@ViewBag.data).Width("400px").Render()
                 @Html.EJS().DropDownList("sync_ver").Index(0).Fields(e => e.Text("Text").Value("Value")).DataSource((List<DropdownModel_Sync>)@ViewBag.sync_ver).Width("400px").Render()
@@ -26,37 +26,77 @@
         </div>
     </section>
     <section class="sub_heading" id="upload_section">
-        <h4 class="heading">Upload files</h4>
-		<h4 class="upload_file_heading">controller</h4>
-        @Html.EJS().Uploader("controller_file").AutoUpload(false).AsyncSettings(new Syncfusion.EJ2.Inputs.UploaderAsyncSettings { SaveUrl = @Url.Content("/Default/Save") }).Uploading("beforeUpload").Render()
-        <h4 class="upload_file_heading">View</h4>
-		<div class="e-float-input sync_text">
-            <input id="view_file_mapping" name="view" required="" type="text" autocomplete="off">
-            <span class="e-float-line"></span>
-            <label class="e-float-text">Target controller for uploading view file</label>
-        </div>
-        @Html.EJS().Uploader("view_file").AutoUpload(false).AsyncSettings(new Syncfusion.EJ2.Inputs.UploaderAsyncSettings { SaveUrl = @Url.Content("/Default/Save") }).Uploading("beforeUpload_view").Render()
-    </section>
-    <section id="Target" class="sub_heading" style="display: none"></section>
-</section>
-<div class="sb-body-overlay e-view sb-hide">
-                <div class="sb-loading">
-                    <svg class="circular" height="40" width="40">
-                        <circle class="path" cx="25" cy="25" r="20" fill="none" stroke-width="6" stroke-miterlimit="10"></circle>
-                    </svg>
-                </div>
+        <div id="inner_el">
+            <h4 class="heading">Upload files</h4>
+            <h4 class="upload_file_heading">Controller</h4>
+            @Html.EJS().Uploader("controller_file").AutoUpload(false).AsyncSettings(new Syncfusion.EJ2.Inputs.UploaderAsyncSettings { SaveUrl = @Url.Content("/Default/Save") }).Uploading("beforeUpload").Render()
+            <h4 class="upload_file_heading">View</h4>
+            <div class="e-float-input sync_text">
+                <input id="view_file_mapping" name="view" required="" type="text" autocomplete="off">
+                <span class="e-float-line"></span>
+                <label class="e-float-text">Target controller for uploading view file</label>
             </div>
+            @Html.EJS().Uploader("view_file").AutoUpload(false).AsyncSettings(new Syncfusion.EJ2.Inputs.UploaderAsyncSettings { SaveUrl = @Url.Content("/Default/Save") }).Uploading("beforeUpload_view").Render()
+        </div>
+    </section>
+    <section id="Target" class="sub_heading" style="display: none">
+        <span id="link"></span>
+        <br />
+        <br />
+        <a id="anchorbtn" class="e-btn e-info" target="_blank">Click to open</a>
+    </section>
+</section>
+<div class="sb-body-overlay"></div>
+<div class="e-view sb-hide" style="display:none">
+    <div class="sb-loading">
+        <svg class="circular" height="40" width="40">
+            <circle class="path" cx="25" cy="25" r="20" fill="none" stroke-width="6" stroke-miterlimit="10"></circle>
+        </svg>
+    </div>
+</div>
 <script>
     $(function () {
         $("#submit").attr("type", "submit");
         $("#submit").addClass("sync_btn");
+        $('#submit').click(processForm);
     })
+    function processForm(e) {
+        $(".sb-body-overlay").show();
+        $(".sb-hide").show();
+        $.ajax({
+            url: '/Default/Index',
+            dataType: 'text',
+            type: 'post',
+            //contentType: "application/json",
+            data: {
+                net_ver: "netcoreapp" + $("#net_ver").val(),
+                sync_ver: $("#sync_ver").val(),
+                controller: $("#controller").val(),
+                view: $("#view").val()
+            },
+            success: function (data, textStatus, jQxhr) {
+                $(".sb-hide").hide();
+                $(".sb-body-overlay").hide();
+                $("#Target").show();
+                $("#link").html("Generated URL: " + data)
+                $("#anchorbtn").attr("href", data)
+            },
+            error: function (jqXhr, textStatus, errorThrown) {
+                $(".sb-hide").hide();
+                $(".sb-body-overlay").hide();
+                console.log(errorThrown);
+            }
+        });
+
+        e.preventDefault();
+    }
+
     displayTarget = function () {
         $("#Target").show();
-        }
-   
+    }
+
     beforeUpload = function (args) {
-        args.customFormData = [{ 'sync_ver': $("#sync_ver").val()  }];
+        args.customFormData = [{ 'sync_ver': $("#sync_ver").val() }];
     }
 
     beforeUpload_view = function (args) {
@@ -68,48 +108,110 @@
 
 
 <style>
-	.sb-body-overlay {
-	display: none;
-    z-index: 10000023;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(255,255,255,1);
-    overflow: hidden;
-    pointer-events: none;
-}
-
-.sb-loading {
-    width: 56px;
-    height: 56px;
-    position: absolute;
-    top: calc(50% - 28px);
-    left: calc(50% - 28px);
-    z-index: 10000;
-    border-radius: 50%;
-    padding: 3px;
-    box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
-    overflow: hidden;
-    display: inline-block;
-    background: #fff;
-}
-svg:not(:root) {
-    overflow: hidden;
-}
-.circular {
-    animation: rotate 2s linear infinite;
-    height: 50px;
-    width: 50px;
-    border-radius: 50%;
-}
-	.upload_file_heading{
-		display: inline-block;
-    color: #3F51B5;
-    font-family: sans-serif;
-	}
-    #upload_section .e-upload.e-control {
-        height: fit-content;
+    form, #inner_el {
+        width: 80%;
+        margin: 0 auto;
     }
+
+    #link {
+        font-weight: bold;
+    }
+
+    #anchorbtn.e-btn.e-info {
+      background-color: #3F51B5;
+    }
+    .sb-body-overlay {
+        display: none;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: #838181;
+        opacity: 0.6;
+        overflow: hidden;
+        pointer-events: none;
+        top: 0;
+    }
+
+    .path {
+        stroke-dasharray: 1, 200;
+        stroke-dashoffset: 0;
+        animation: dash 1.5s ease-in-out infinite, color 6s ease-in-out infinite;
+        stroke-linecap: round;
+        stroke: #3F51B5;
+    }
+
+
+    @@keyframes dash {
+        0% {
+            stroke-dasharray: 1, 200;
+            stroke-dashoffset: 0;
+        }
+
+        50% {
+            stroke-dasharray: 89, 200;
+            stroke-dashoffset: -35;
+        }
+
+        100% {
+            stroke-dasharray: 89, 200;
+            stroke-dashoffset: -124;
+        }
+    }
+
+    .sb-loading {
+        width: 56px;
+        height: 56px;
+        position: absolute;
+        top: calc(50% - 28px);
+        left: calc(50% - 28px);
+        z-index: 10000;
+        border-radius: 50%;
+        padding: 3px;
+        box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+        overflow: hidden;
+        display: inline-block;
+        background: #fff;
+    }
+
+    svg:not(:root) {
+        overflow: hidden;
+    }
+
+    .circular {
+        animation: rotate 4s linear infinite;
+        -webkit-animation: rotate 4s linear infinite;
+        -moz-animation: rotate 4s linear infinite;
+        animation: rotate 4s linear infinite;
+        height: 50px;
+        width: 50px;
+        border-radius: 50%;
+    }
+
+    @@-moz-keyframes rotate {
+        100% {
+            -moz-transform: rotate(360deg);
+        }
+    }
+
+    @@-webkit-keyframes rotate {
+        100% {
+            -webkit-transform: rotate(360deg);
+        }
+    }
+
+    @@keyframes rotate {
+        100% {
+            -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+        }
+    }
+
+    .upload_file_heading {
+        display: inline-block;
+        color: #3F51B5;
+        font-family: sans-serif;
+    }
+
     .heading {
         font-family: sans-serif;
         font-weight: bold;
@@ -133,6 +235,10 @@ svg:not(:root) {
 
     input.e-input, .e-textbox {
         padding: 10px;
+    }
+
+    #inner_el .e-upload {
+        float: none;
     }
 
     .e-uploadbox.e-widget .e-inputbtn {
@@ -174,25 +280,19 @@ svg:not(:root) {
     #user_input form > .sync_btn {
         margin-left: 40%;
         margin-bottom: 26px;
-		    background-color: transparent;
-    border: 2px solid #3F51B5;
-    color: #3F51B5;
     }
-	
-	#user_input form > .sync_btn:hover {
-       
-		    background-color: #3F51B5;
-   
-    }
+
 
     #user_input form > * {
         margin-left: 13%;
-        margin-top: 20px;
+        margin-top: 30px;
+    }
+
+    div#inner_el > * {
+        margin-top: 14px;
     }
 
     #upload_section > * {
-        margin-left: 14%;
-        margin-top: 21px;
         width: 400px;
     }
 
@@ -207,7 +307,8 @@ svg:not(:root) {
         margin: 23px;
     }
 
-    #Target{
+    #Target {
+        padding: 20px;
         width: 93%;
         padding: 0;
         margin: 0 37px 37px 37px;
